--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,39 +34,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # # Firebase
+  firebase_core: ^4.2.0
+   # State Management
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  firebase_auth: ^6.1.1
+  cloud_firestore: ^6.0.3
+  google_sign_in: ^7.2.0
+    # # UI & Utils
+  cached_network_image: ^3.4.1
+  image_picker: ^1.2.0
+  shared_preferences: ^2.5.3
+  # # Localization
+  easy_localization: ^3.0.8
+  
+  http: ^1.5.0
+  formz: ^0.8.0
+  dio: ^5.9.0
+  get_it: ^8.2.0
+  flutter_dotenv: ^6.0.0
+  # # Screen Util for responsive design
+  flutter_screenutil: ^5.9.3
 
-  # State Management
-  flutter_bloc: ^8.1.3
-  equatable: ^2.0.5
 
-  # Firebase
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-
-  # Google Sign In
-  google_sign_in: ^6.2.1
-
-  # Localization
-  easy_localization: ^3.0.7
-
-  # UI & Utils
-  cached_network_image: ^3.3.0
-  image_picker: ^1.0.4
-  shared_preferences: ^2.2.2
-
-  # HTTP & Network
-  http: ^1.1.2
-  dio: ^5.4.0
-
-  # Form Validation
-  formz: ^0.6.1
-
-  # Dependency Injection
-  get_it: ^7.6.4
-
-  # Environment Variables
-  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
